--- a/app/config/fos_user.yml
+++ b/app/config/fos_user.yml
@@ -2,3 +2,15 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
+
+    registration:
+        form:
+            type: app_user_registration
+
+    from_email:
+      address:     mecaigotolosdias@gmail.com
+      sender_name: kveo
+
+    resetting:
+        email:
+            template: email/FOSUserBundle.resetting.email.html.twig
