Ajax search box

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,3 +4,6 @@ parameters:
 services:
     slugger:
         class: AppBundle\Utils\Slugger
+
+    term_splitter:
+        class: AppBundle\Utils\TermSplitter
