--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,8 @@ imports:
     - { resource: services.yml }
     - { resource: fos_user.yml }
     - { resource: liip_imagine.yml }
-    - { resource: knp_paginator.yml}
+    - { resource: knp_paginator.yml }
+    - { resource: ornicar_gravatar.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
