--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "liip/imagine-bundle": "^1.5",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "ornicar/gravatar-bundle" : "~1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
