--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "liip/imagine-bundle": "^1.5",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "ornicar/gravatar-bundle" : "~1.0"
+        "ornicar/gravatar-bundle" : "~1.0",
+        "javiereguiluz/easyadmin-bundle": "^1.12"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
