--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,6 +6,7 @@ imports:
     - { resource: liip_imagine.yml }
     - { resource: knp_paginator.yml }
     - { resource: ornicar_gravatar.yml }
+    - { resource: easy_admin.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
