--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,3 +26,8 @@ _liip_imagine:
 
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+easy_admin_bundle:
+    resource: "@AppBundle/Controller/AdminController.php"
+    type:     annotation
+    prefix:   /boss
