--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.0.*",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -32,7 +32,8 @@
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "knplabs/knp-paginator-bundle": "^2.5",
         "ornicar/gravatar-bundle" : "~1.0",
-        "javiereguiluz/easyadmin-bundle": "^1.12"
+        "javiereguiluz/easyadmin-bundle": "^1.12",
+        "blackknight467/star-rating-bundle": "1.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
