--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "ornicar/gravatar-bundle" : "~1.0",
         "javiereguiluz/easyadmin-bundle": "^1.12",
-        "blackknight467/star-rating-bundle": "2.*"
+        "blackknight467/star-rating-bundle": "2.*",
+        "vich/uploader-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
