Changed paginator range

--- a/app/config/knp_paginator.yml
+++ b/app/config/knp_paginator.yml
@@ -1,3 +1,4 @@
 knp_paginator:
+    page_range: 3
     template:
         pagination:  KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig
