Created contact form

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -15,3 +15,9 @@ services:
         public: false
         tags:
             - { name: security.voter }
+
+    kveo_mailer:
+        class: AppBundle\Utils\Mailer
+        arguments:
+            - "@mailer"
+            - "@templating"
