Replaced email and test names

--- a/app/config/fos_user.yml
+++ b/app/config/fos_user.yml
@@ -4,7 +4,7 @@ fos_user:
     user_class: AppBundle\Entity\User
 
     from_email:
-      address:     mecaigotolosdias@gmail.com
+      address:     example.email@kveo.local
       sender_name: kveo
 
     resetting:
