--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ matrix:
 before_install:
   - composer self-update
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - php app/console doctrine:database:create --env=test
-  - php app/console doctrine:schema:create --env=test
-  - php app/console doctrine:fixtures:load -n --env=test
+  - php bin/console doctrine:database:create --env=test
+  - php bin/console doctrine:schema:create --env=test
+  - php bin/console doctrine:fixtures:load -n --env=test
 
 install:
   - composer install
