--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ cache:
 matrix:
   fast_finish: true
   include:
-    - php: 5.3
-    - php: 5.4
     - php: 5.5
     - php: 5.6
     - php: 7.0
@@ -18,10 +16,10 @@ matrix:
   allow_failures:
     - php: hhvm
 
-before_install:
+install:
   - composer self-update
 
-install:
+before-script:
   - composer install
   - cp app/config/parameters.yml.travis app/config/parameters.yml
   - php bin/console doctrine:database:create --env=test
