--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before-script:
   - php bin/console doctrine:fixtures:load -n --env=test
 
 script:
-  - phpunit -c app
+  - phpunit
 
 notifications:
   email: ajimenez.bf@gmail.com
