--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@
 language: php
 sudo: false
 
+services:
+  - mysql
+
 cache:
   directories:
     - $HOME/.composer/cache/files
@@ -16,6 +19,9 @@ matrix:
   allow_failures:
     - php: hhvm
 
+env:
+  - SYMFONY_VERSION="3.0.*" DB=mysql
+
 before-install:
   - composer self-update
 
@@ -23,8 +29,8 @@ install:
   - composer install
 
 before-script:
-  - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - php bin/console doctrine:database:create --env=test
+  - mysql -u root -e 'CREATE DATABASE kveo;'
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
   - php bin/console doctrine:schema:create --env=test
   - php bin/console doctrine:fixtures:load -n --env=test
 
