--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ before-install:
 
 install:
   - composer install
-  - mysql -u root -e 'CREATE DATABASE kveo;'
   - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:create --env=test
   - php bin/console doctrine:fixtures:load -n --env=test
 
