Changes on test config
- Updated phpunit.xml.dist
- Updated config_test.yml created sqlite bf for tests
- Load fixtures before tests
- Make a copy of the original SQLite database to use a clean db very
  testin

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -19,3 +19,11 @@ security:
   firewalls:
     main:
       http_basic: ~
+
+doctrine:
+    dbal:
+        default_connection: default
+        connections:
+            default:
+                driver:   pdo_sqlite
+                path:     build/test.db
