--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- http://phpunit.de/manual/4.1/en/appendixes.configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
-         backupGlobals="false"
+<phpunit backupGlobals="false"
+         backupStaticAttributes="false"
          colors="true"
-         bootstrap="app/autoload.php"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false"
+         syntaxCheck="true"
+         bootstrap="tests/bootstrap.php"
 >
     <php>
         <ini name="error_reporting" value="-1" />
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="kveo Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
 
     <php>
         <server name="KERNEL_DIR" value="app/" />
+        <ini name="error_reporting" value="E_ALL" />
+        <ini name="display_errors" value="1" />
+        <ini name="display_startup_errors" value="1" />
+        <ini name="memory_limit" value="-1" />
+        <ini name="zend.enable_gc" value="1" />
     </php>
 
     <filter>
