--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,5 +27,5 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/boss/*, role: ROLE_USER }
+        - { path: ^/boss/*, role: ROLE_SUPER_ADMIN }
         - { path: ^/*, role: ROLE_USER }
