--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
     - { resource: ornicar_gravatar.yml }
     - { resource: easy_admin.yml }
     - { resource: vich_uploader.yml }
+    - { resource: lexit_jwt.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
