--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,6 +9,7 @@ imports:
     - { resource: easy_admin.yml }
     - { resource: vich_uploader.yml }
     - { resource: lexit_jwt.yml }
+    - { resource: fos_rest.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -26,7 +27,7 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+    #serializer:     { enable_annotations: true }
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
