--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -31,3 +31,8 @@ easy_admin_bundle:
     resource: "@AppBundle/Controller/AdminController.php"
     type:     annotation
     prefix:   /boss
+
+api:
+    type: rest
+    resource: "routing_api.yml"
+    prefix: /api
