--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,6 +11,10 @@ security:
             id: fos_user.user_provider.username_email
 
     firewalls:
+        api:
+            pattern: /api/
+            anonymous: true
+
         main:
             pattern: ^/
             form_login:
@@ -24,6 +28,7 @@ security:
 
     access_control:
         - { path: ^/(_(profiler|wdt)|css|images|js)/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
