--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,3 +74,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+#NelmioApiDoc Configuration
+nelmio_api_doc:
+    name:   'Kveo API documentation'
