--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,10 @@
         "javiereguiluz/easyadmin-bundle": "^1.12",
         "blackknight467/star-rating-bundle": "2.*",
         "vich/uploader-bundle": "^1.0",
+        "friendsofsymfony/rest-bundle": "^2.0",
         "lexik/jwt-authentication-bundle": "dev-master",
-        "jms/serializer-bundle": "^1.1"
+        "jms/serializer-bundle": "^1.1",
+        "nelmio/api-doc-bundle": "^2.13"
 
     },
     "require-dev": {
