--- a/app/config/fos_rest.yml
+++ b/app/config/fos_rest.yml
@@ -7,3 +7,5 @@ fos_rest:
         rules:
             - { path: ^/api, priorities: [ json ], fallback_format: json, prefer_extension: true }
             - { path: ^/, priorities: [ html ], fallback_format: html, prefer_extension: true }
+    routing_loader:
+        include_format: false
