--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -12,7 +12,10 @@ security:
 
     firewalls:
         api:
-            pattern: /api/
+            pattern: ^/api/
+            guard:
+                authenticators:
+                    - app.jwt_token_authenticator
             anonymous: true
 
         main:
@@ -28,7 +31,11 @@ security:
 
     access_control:
         - { path: ^/(_(profiler|wdt)|css|images|js)/, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+        - { path: ^/api/doc, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /api/token-authentication, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/*, role: ROLE_USER }
+
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
