--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "friendsofsymfony/rest-bundle": "^2.0",
         "lexik/jwt-authentication-bundle": "dev-master",
         "jms/serializer-bundle": "^1.1",
-        "nelmio/api-doc-bundle": "^2.13"
+        "nelmio/api-doc-bundle": "^2.13",
+        "guzzlehttp/guzzle": "^6.2"
 
     },
     "require-dev": {
